--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,17 @@
 [project]
-name = "shrpid"
-version = "2.2.6"
-description = "shrpid is a power monitor and watchdog daemon for the SH-RPi."
+name = "halpid"
+version = "0.1.0"
+description = "halpid is a power monitor and watchdog daemon for the HALPI2."
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 dependencies = [
-    "aiohttp>=3.10.11",
-    "dateparser>=1.2.0",
+    "aiohttp>=3.11.18",
+    "dateparser>=1.2.1",
     "loguru>=0.7.3",
     "pyyaml>=6.0.2",
-    "rich>=13.9.4",
+    "rich>=14.0.0",
     "smbus2>=0.5.0",
-    "typer>=0.15.1",
+    "typer>=0.15.3",
 ]
 authors = [{ name = "Matti Airas", email = "matti.airas@hatlabs.fi" }]
 
@@ -20,39 +20,39 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/shrpi"]
+packages = ["src/halpid"]
 
 [project.scripts]
-shrpi = "shrpi.__main__:cli"
-shrpid = "shrpi.__main__:daemon"
+halpi = "halpid.__main__:cli"
+halpid = "halpid.__main__:daemon"
 
 [dependency-groups]
 dev = [
-    "coverage>=7.6.1",
+    "coverage>=7.8.0",
     "coverage-badge>=1.1.2",
-    "mypy>=1.14.1",
-    "mypy-extensions>=1.0.0",
+    "mypy>=1.15.0",
+    "mypy-extensions>=1.1.0",
     "pydocstyle>=6.3.0",
-    "pylint>=3.2.7",
-    "pytest>=8.3.4",
-    "pytest-cov>=5.0.0",
-    "pyupgrade>=3.8.0",
-    "ruff>=0.9.0",
-    "types-dateparser>=1.2.0.20240420",
-    "types-pyyaml>=6.0.12.20241230",
+    "pylint>=3.3.7",
+    "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
+    "pyupgrade>=3.19.1",
+    "ruff>=0.11.9",
+    "types-dateparser>=1.2.0.20250408",
+    "types-pyyaml>=6.0.12.20250402",
 ]
 
 [tool.ruff]
 line-length = 88
 # pyflakes, pycodestyle and isort
 lint.select = ["F", "E", "W", "I001"]
-target-version = "py38"
+target-version = "py312"
 
 [tool.mypy]
 # https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
 color_output = true
 pretty = true
-python_version = "3.8"
+python_version = "3.12"
 show_traceback = true
 
 allow_redefinition = false
