--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,11 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/halpid"]
+packages = ["src/halpi"]
 
 [project.scripts]
-halpi = "halpid.__main__:cli"
-halpid = "halpid.__main__:daemon"
+halpi = "halpi.__main__:cli"
+halpid = "halpi.__main__:daemon"
 
 [dependency-groups]
 dev = [
