Support .env file in docker compose

--- a/docker/docker-compose.debtools.yml
+++ b/docker/docker-compose.debtools.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.debtools
+    env_file: ../.env
     environment:
       - DIR_NAME=${DIR_NAME}
     volumes:
