--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,28 +12,37 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install build dependencies
+    - name: Set up cross-compilation for ARM64
       run: |
-        apt-get update
-        apt-get install -y \
-            debhelper \
-            dh-virtualenv \
-            dh-make \
-            devscripts \
-            build-essential \
-            python3-dev \
-            python3-venv \
-            python3-pip \
-            git \
-            vim \
-            && rm -rf /var/lib/apt/lists/*
+        sudo apt-get update
+        sudo apt-get install -y qemu-user-static
+        sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 
-
-    - name: Build package
+    - name: Build package for arm64
       run: |
-        dpkg-buildpackage -us -uc
-        mkdir -p dist
-        mv ../*.deb dist/
+        # Use Docker to build for arm64
+        docker run --rm -v $PWD:/workspace \
+          --platform linux/arm64 \
+          debian:bookworm bash -c "
+            cd /workspace
+            apt-get update
+            apt-get install -y debhelper \
+              dh-virtualenv \
+              dh-make \
+              devscripts \
+              build-essential \
+              python3-dev \
+              python3-venv \
+              python3-pip \
+              git \
+              vim \
+              && rm -rf /var/lib/apt/lists/*
+
+            # Build the package
+            dpkg-buildpackage -us -uc -aarm64
+            mkdir -p dist
+            mv ../*.deb dist/ 2>/dev/null || true
+          "
 
     - name: Create Release
       uses: softprops/action-gh-release@v1
@@ -44,7 +53,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Trigger APT repository update
-      uses: peter-evans/repository-dispatch@v2
+      uses: peter-evans/repository-dispatch@v3
       with:
         token: ${{ secrets.APT_REPO_PAT }}
         repository: hatlabs/apt.hatlabs.fi
