--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,9 @@ jobs:
 
     - name: Set up cross-compilation for ARM64
       run: |
-        sudo apt-get update
-        sudo apt-get install -y qemu-user-static
-        sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+        apt-get update
+        apt-get install -y qemu-user-static
+        docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 
     - name: Build package for arm64
       run: |
