--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,43 +6,34 @@ on:
 
 jobs:
   build-and-release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-arm64
     container: debian:bookworm
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up cross-compilation for ARM64
+    - name: Install build dependencies
       run: |
         apt-get update
-        apt-get install -y qemu-user-static
-        docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+        apt-get install -y \
+            debhelper \
+            dh-virtualenv \
+            dh-make \
+            devscripts \
+            build-essential \
+            python3-dev \
+            python3-venv \
+            python3-pip \
+            git \
+            vim \
+            && rm -rf /var/lib/apt/lists/*
 
-    - name: Build package for arm64
+
+    - name: Build package
       run: |
-        # Use Docker to build for arm64
-        docker run --rm -v $PWD:/workspace \
-          --platform linux/arm64 \
-          debian:bookworm bash -c "
-            cd /workspace
-            apt-get update
-            apt-get install -y debhelper \
-              dh-virtualenv \
-              dh-make \
-              devscripts \
-              build-essential \
-              python3-dev \
-              python3-venv \
-              python3-pip \
-              git \
-              vim \
-              && rm -rf /var/lib/apt/lists/*
-
-            # Build the package
-            dpkg-buildpackage -us -uc -aarm64
-            mkdir -p dist
-            mv ../*.deb dist/ 2>/dev/null || true
-          "
+        dpkg-buildpackage -us -uc
+        mkdir -p dist
+        mv ../*.deb dist/
 
     - name: Create Release
       uses: softprops/action-gh-release@v1
@@ -53,7 +44,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Trigger APT repository update
-      uses: peter-evans/repository-dispatch@v3
+      uses: peter-evans/repository-dispatch@v2
       with:
         token: ${{ secrets.APT_REPO_PAT }}
         repository: hatlabs/apt.hatlabs.fi
