--- a/debian/control
+++ b/debian/control
@@ -4,16 +4,14 @@ Priority: important
 Maintainer: Matti Airas <matti.airas@hatlabs.fi>
 Build-Depends:
   debhelper-compat (= 13),
-  dh-virtualenv (>= 1.0.0),
   python3-dev,
-  python3-venv,
-  python3-pip
+  curl
 Standards-Version: 4.6.0
 
 Package: halpid
 Architecture: any
-Pre-Depends: dpkg (>= 1.16.1), python3 (>= 3.11), ${misc:Pre-Depends}
-Depends: ${python3:Depends}, ${misc:Depends}, python3-venv
+Pre-Depends: dpkg (>= 1.16.1), ${misc:Pre-Depends}
+Depends: ${misc:Depends}
 Recommends: halpi-firmware
 Description: HALPI2 service daemon
  `halpid` is a power monitor and watchdog service for HALPI2. It communicates
