--- a/docker/Dockerfile.debtools
+++ b/docker/Dockerfile.debtools
@@ -3,16 +3,19 @@ FROM debian:bookworm
 # Install all packaging tools
 RUN apt-get update && apt-get install -y \
     debhelper \
-    dh-virtualenv \
     dh-make \
     devscripts \
     build-essential \
     python3-dev \
     python3-venv \
-    python3-pip \
     git \
     vim \
+    curl \
     && rm -rf /var/lib/apt/lists/*
+
+# Install uv for root user (needed during build)
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+ENV PATH="/root/.local/bin:$PATH"
 
 # Set up working directory
 WORKDIR /workspace
@@ -21,5 +24,9 @@ WORKDIR /workspace
 RUN useradd -m -s /bin/bash builder && \
     chown builder:builder /workspace
 USER builder
+
+# Install uv for builder user
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+ENV PATH="/home/builder/.local/bin:$PATH"
 
 CMD ["/bin/bash"]
