Use docker compose v2

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build packages
         run: |
           cd docker
-          docker-compose -f docker-compose.debtools.yml up --build
+          docker compose -f docker-compose.debtools.yml up --build
 
       - name: Collect built packages
         run: |
