--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   # Build packages on every push
   build-packages:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-arm64
     if: github.event_name == 'push'
     steps:
     - uses: actions/checkout@v5
